ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/Statements/ReturnStatements/parserReturnStatement2/input.ts.stderr
error[1108]: A 'return' statement can only be used within a function body.
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Statements/ReturnStatements/parserReturnStatement2/input.ts:2:4
  |
2 |    return;
  |    ^^^^^^^

